--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
     /* Hero Section */
     .hero {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/api/placeholder/1600/900');
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('download.jpeg');
       background-size: cover;
       background-position: center;
       height: 100vh;
