--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <div class="model-card">
           <div class="model-viewer-container">
             <model-viewer
-              src="muscules.zip"
+              src="muscles.glb"
               alt="Muscular System Model"
               auto-rotate
               camera-controls
