--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         <div class="model-card">
           <div class="model-viewer-container">
             <model-viewer
-              src="muscules.glb"
+              src="muscles.glb"
               alt="Muscular System Model"
               auto-rotate
               camera-controls
