--- a/muscular.html
+++ b/muscular.html
@@ -23,7 +23,7 @@
 </header>
 
 <model-viewer 
-  src="muscules.glb" 
+  src="muscles.glb" 
   alt="3D model of muscular system"
   camera-controls 
   auto-rotate 
